# registry.pol-rs

./: .travis.yml  Cargo.toml  README.md  aliases.js  appveyor.yml  gh_rsa.enc  registry.pol-rs.sublime-project  search-index.js
memchr/: fn.memchr.html  fn.memchr2.html  fn.memchr3.html  fn.memrchr.html  index.html  struct.Memchr.html  struct.Memchr2.html  struct.Memchr3.html
nom/: all.html  enum.CompareResult.html  enum.ConsumerState.html  enum.Endianness.html  enum.ErrorKind.html  enum.FileProducerState.html  enum.IError.html  enum.IResult.html  enum.Input.html  enum.Move.html  enum.Needed.html  fn.alpha.html  fn.alphanumeric.html  fn.anychar.html  fn.be_f32.html  fn.be_f64.html  fn.be_i16.html  fn.be_i24.html  fn.be_i32.html  fn.be_i64.html  fn.be_i8.html  fn.be_u16.html  fn.be_u24.html  fn.be_u32.html  fn.be_u64.html  fn.be_u8.html  fn.begin.html  fn.code_from_offset.html  fn.crlf.html  fn.digit.html  fn.double.html  fn.double_s.html  fn.eol.html  fn.error_to_u32.html  fn.float.html  fn.float_s.html  fn.hex_digit.html  fn.hex_u32.html  fn.is_alphabetic.html  fn.is_alphanumeric.html  (+172 more)
nom/bits/: index.html
nom/methods/: index.html
nom/simple_errors/: index.html  type.Err.html
nom/whitespace/: fn.sp.html  index.html
registry_pol/: REGFILE_SIGNATURE.v.html  all.html  constant.REGFILE_SIGNATURE.html  fn.henlo.html  henlo.v.html  index.html  sidebar-items.js
registry_pol/v1/: REGISTRY_FILE_VERSION.v.html  RegistryValue.t.html  RegistryValueType.t.html  fn.parse.html  index.html  (+4 more)
src/: lib.rs
test-data/: Machine-Registry.pol  User-Registry.pol
tests/: lib.rs
(+39 files in other folders)
