[package]
name = "registry-pol"
description = "Parser for the Windows Registry Policy File format"
documentation = "https://rawcdn.githack.com/nabijaczleweli/registry.pol-rs/doc/registry_pol/index.html"
repository = "https://github.com/nabijaczleweli/registry.pol-rs"
readme = "README.md"
keywords = ["windows", "parser", "registry"]
categories = ["parser-implementations"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "1.0.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
exclude = ["*.enc"]


[dependencies]
lazy_static = "1.0"
nom = "3.2"

[dev-dependencies]
quickcheck = "0.6"

[target.'cfg(target_os = "windows")'.dev-dependencies.winapi]
version = "0.3"
features = ["winnt"]
default-features = false
